# doutorado_proj_pesquisa

./: .gitignore  README.md  projeto_pesquisa.md  prompts.txt  pyproject.toml
.windsurf/rules/: general.md  how-to-help-with-slides.md
latex/: main.tex  vitor.bib  vitor.tex
papers/: Navigating the Jagged Technological Frontier - Field Experimental Evidence of the Effects of AI on Knowledge Worker Productivity and Quality.md  navigating_reflow.md
papers/claudio/: paper Measuring the Benefits of a Generative AI Copilot (Cortex) in Well Construction.txt
papers/posdoc claudio/: posdoc claudio slides.md  projeto_pesquisa_claudio.txt
projeto/: dataset_consultas.txt  projeto_pesquisa.txt  taxonomias_e_exemplos_de_tarefas.md
projeto/paralelo projeto claudio/: paralelo projetos vitor e claudio.md  professor antorweep.md  roteiro_apresentacao_completo.md
projeto/taxonomias/: taxonomias_gpt5low.md
scripts/: extract_pdf_text.py
